# nocturne-ui

./: .env.example  .gitignore  AGENTS.md  Caddyfile  README.md  bun.lockb  flake.nix  next.config.mjs  package-lock.json  package.json  postcss.config.js  prodserver.js  repomix-output.txt  tailwind.config.js  vite.config.js  wrangler.toml
.github/workflows/: add-prs-to-triage.yaml  build.yml
documentation/: CHANGES.md  readme.md  spotify-relay.php  sync-to-device.sh
nocturne/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  build.sh  docker-entrypoint.sh  update-template.json
nocturne-ui/: .env.example  LICENSE  index.html  package-lock.json  test-spotify-api.html  vite.config.js
nocturne-ui/src/: App.jsx  index.css  main.jsx
nocturne/scripts/: firstboot.sh  reset-data  reset-settings
nocturned/: main.go
nocturned/utils/: auth.go
public/license/: ui-license.txt
src/: App.jsx  index.css  middleware.js
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AGENTS.md  AuthSelection.jsx  ButtonMappingOverlay.jsx  DonationQRModal.jsx  Drawer.jsx  ErrorAlert.jsx  LongPressLink.jsx  PhoneAuthPage.jsx  QRAuthFlow.jsx  QRCodeDisplay.jsx  ResetTimerOverlay.jsx  ResolutionCheck.jsx  Settings.jsx  Sidebar.jsx  SuccessAlert.jsx
src/constants/: errorCodes.js  fonts.js
src/contexts/: ConnectorContext.jsx  NotificationContext.jsx  OTAContext.jsx  SettingsContext.jsx  VoiceContext.jsx
src/hooks/: AGENTS.md  useAppState.js  useAuth.js  useAuthState.js  useBluetooth.js  useButtonMapping.jsx  useCurrentTime.js  useLyrics.js  (+26 more)
(+701 files in other folders)
